working on thesis as a single file

--- a/thesis/content/toremove/ch02-lit-review.tex
+++ b/thesis/content/toremove/ch02-lit-review.tex
@@ -11,11 +11,27 @@
 
 %%% 1 page: overview of what is going on
 
-%%%-----------------------------------------------------------------------------
+%------------------------------------------------------------------------------
+
+In this chapter, related research to this work is being presented. It starts with introducing and reviewing common terminology used in the research on affect and emotion and the methods that have been used to measure affect and estimate emotion; And continues by presenting previous research in game balancing that inspired this work in its game experience enhancement study.
+
+%------------------------------------------------------------------------------
 
 \section{Affect and Emotion}
-%%% Here I'd talk about different approaches for describing emotions and affects
-%%% like the AV space
+
+In this section common terms used in the literature is introduced along with different ways these terms are often described.
+
+\subsection{Terminology}
+
+The terms \textit{affect} and \textit{emotion} are often used interchangeably and using these terms without any specific description highlighting their differences can be usually confusing. To avoid this confusion it is important to understand the distinction between these terms. In this thesis, \textit{affect} is 
+
+\section{Describing Emotion}
+
+\subsection{Discrete Categories}
+
+\subsection{Continious Dimensions}
+
+\section{Recognizing Emotions}
 
 Using emotional responses to increase the level of users interaction with a real-time play technology requires an effective technique to identifying specific emotion states within an emotional space. Major existing emotion models in the psychology literature includes: basic emotion theory ~\cite{ekman1992argument, ekman1992there} , dimensional emotion theory ~\cite{lang1995emotion, russell1980circumplex} and models from appraisal theory (e.g.,~\cite{roseman2001model}) ~\cite{zhang2010service}
 
@@ -37,20 +53,24 @@ Lang used a 2-D space defined by arousal and valence (pleasure) (AV space) to cl
 
 Both mentioned models for identifying emotions convey some practical issues in emotion measurement. In a HCI context, the stimuli for potential emotions may vary less than in human-human interaction (e.g., participant verbal expressions and body language) ~\cite{zhang2010service} and also the combination of evoked emotions ~\cite{peter2006emotion}. However with help of physiological signals and the fuzzy logic in the model we are going to use, such issues with our dimentional emotion models would be minimized. Though it is anticipated to observe different range of evoked emotions while interacting with play technologies compared to interacting with other humans in daily life. ~\cite{zhang2010service}. However our dimensional emotion models suffers some other problems. One problems is that arousal and valence are not independent and one can impact the other ~\cite{mandryk2007fuzzy}. Continuously capturing emotional experiences in this applied setting is of its other hallmarks. Subjective measures based on dimensional emotion theory, such as the Affect Grid ~\cite{russell1989affect} and the Self-Assessment Manikin ~\cite{bradley1994measuring}, allow for quick assessments of user emotional experiences but they may aggregate responses over the course of many events ~\cite{zhang2010service}. This work uses Mandryk et al. version of AV space ~\cite{mandryk2007fuzzy}.
 
-%%%-----------------------------------------------------------------------------
+%------------------------------------------------------------------------------
 
 \section{Measuring Affect}
 %%% Talk about various sensors and their attributes, in particular the GSR sensor
 %%% and how it can be used to detect Arousal using the fazzy logic
 
-%%%-----------------------------------------------------------------------------
+%------------------------------------------------------------------------------
 
 \section{Affect and Play Technologies}
 %%% talk about play technologies and why do people play them
 %%% the importance of being challenged in play technologies
 %%% and its effect on arousal level
 
-%%%-----------------------------------------------------------------------------
+%------------------------------------------------------------------------------
+
+\section{Video Games and Game Balance}
+
+%------------------------------------------------------------------------------
 
 \section{Real Time Game Adaptation}
 %%% talk about works has beed done in this area and different approaches
@@ -76,4 +96,4 @@ the player can interactively experience various emotions and mental conditions.
 This interactive experience in contrast to cinema
 and other major types of entertainment is what makes them exceptional
 
-%%%-----------------------------------------------------------------------------
+%------------------------------------------------------------------------------
